[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/MISC/AmaticSC-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/grass_item.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/MISC/Economica-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Scripts/title_nav.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 130
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.0
margin_top = -82.5
margin_right = 111.0
margin_bottom = 82.5
custom_fonts/font = SubResource( 1 )
text = "Rabbit"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grass" parent="Title" instance=ExtResource( 2 )]
position = Vector2( -32, 96 )

[node name="Grass2" parent="Title" instance=ExtResource( 2 )]
position = Vector2( 240, 96 )

[node name="Begin" type="Button" parent="Title"]
margin_left = -48.0
margin_top = 160.0
margin_right = 39.0
margin_bottom = 215.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.454902, 0.862745, 0.364706, 1 )
custom_colors/font_color_pressed = Color( 0.890196, 0.517647, 0.129412, 1 )
text = "Begin"
flat = true

[node name="Credits" type="Button" parent="Title"]
margin_left = 65.0
margin_top = 162.0
margin_right = 152.0
margin_bottom = 217.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.454902, 0.862745, 0.364706, 1 )
custom_colors/font_color_pressed = Color( 0.890196, 0.517647, 0.129412, 1 )
text = "Credits"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Title"]
margin_left = 184.0
margin_top = 164.0
margin_right = 271.0
margin_bottom = 219.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.454902, 0.862745, 0.364706, 1 )
custom_colors/font_color_pressed = Color( 0.890196, 0.517647, 0.129412, 1 )
text = "Retire~"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Title/Begin" to="." method="_on_Begin_pressed"]
[connection signal="pressed" from="Title/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Title/Quit" to="." method="_on_Quit_pressed"]
